--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,26 @@
+nav {
+	background-color: #144ecc;
+	box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.navbar-brand {
+	color: #fff;
+	font-family: 'Ubuntu Condensed', sans-serif;
+	font-size: 32px;
+}
+
+.nav-btn {
+	color: #222;
+	font-family: 'Oswald', sans-serif;
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
+.nav-btn:hover, .nav-btn:focus {
+	background-color: #fff;
+	color: #222;
+}
+
 .icon-bar {
-	background-color: black;
+	background-color: #fff;
 }
